crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_base/function/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 8758] Error: Contract expected.
   ╭─[input.sol:6:15]
   │
 6 │ contract C is someFreeFunction {}
   │               ────────┬───────  
   │                       ╰───────── Error occurred here.
───╯
